[package]
name = "eis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.11", features = ["derive"] }
ctrlc = "3.4.1"
git2 = "0.18.1"
sysinfo = "0.29.11"
tokio = { version = "1.35.0", features = ["full"] }
